# Linera_oracle

./: .dockerignore  .gitignore  COMPLETE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  RAILWAY.md  README.md  UPGRADE_STATUS.md  check-deployment.ps1  check-deployment.sh  compose.yaml  deploy-simple.sh  linera-manifest.yaml  nixpacks.toml  package.json  railway.json  render.yaml  run-railway.bash  run.bash  test-local.sh  vercel.json
backend-v2/: .env.example  package-lock.json  package.json
backend-v2/src/: index.js
backend-v2/src/aggregation/: aggregator.js  candles.js
backend-v2/src/oracles/: chainlink.js  coingecko.js  pyth.js
contracts/price-oracle-contract/: Cargo.toml
contracts/price-oracle-contract/src/: main.rs
frontend-v2/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend-v2/src/: App.jsx  index.css
frontend-v2/src/components/: Layout.jsx
frontend-v2/src/pages/: Alerts.jsx  Analytics.jsx  ApiDocs.jsx  Dashboard.jsx  Subscription.jsx
metadata-microchain/: Cargo.toml
metadata-microchain/src/: contract.rs  lib.rs  service.rs  state.rs
oracle-microchain/: Cargo.toml  linera.toml
oracle-microchain/src/: contract.rs  lib.rs  service.rs  state.rs
price-oracle/: Cargo.toml
price-oracle/src/: lib.rs  state.rs
scripts/: copy-wasm.mjs
services/price-oracle-service/: Cargo.toml
services/price-oracle-service/src/: main.rs
subscription-microchain/: Cargo.toml
subscription-microchain/src/: contract.rs  lib.rs  service.rs  state.rs
