[workspace]
members = [
    "oracle-microchain",
]
resolver = "2"

[workspace.dependencies]
async-graphql = "7.0"
linera-sdk = "0.15.5"
linera-views = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[profile.release]
debug = false
lto = true
opt-level = "s"
strip = true
