[package]
name = "oracle-microchain"
version = "1.0.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
linera-sdk = "0.15.5"
linera-views = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.5", features = ["test"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle-microchain_contract"
path = "src/contract.rs"

[[bin]]
name = "oracle-microchain_service"
path = "src/service.rs"
